Avoid minor memory leak in gtk_source_undo_action_free()

Anyway the g_return_if_reached() should never happen.

https://bugzilla.gnome.org/show_bug.cgi?id=638695